# webdev-omnitoolkit

./: .gitignore  README.md  Taskfile.yml  composer.json  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: gh-page-publish-build.yml
.husky/: pre-commit
knowledge/: readme.json
tools/: package.json  pyproject.toml
tools/presets/: install.composer.sh  install.docker.sh  install.phive.sh
