[project]
name = "webdev-omnitoolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.124.2",
    "gitpython>=3.1.45",
    "go-task-bin>=3.45.5",
    "jsonschema>=4.25.1",
    "ollama>=0.6.1",
    "paramiko>=4.0.0",
    "pygithub>=2.8.1",
    "pytoml>=0.1.21",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.14.8",
    "tools",
]

[tool.uv.workspace]
members = [
    "tools",
]

[tool.uv.sources]
tools = { workspace = true }
