[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sett Sarverott A.A.B.", email = "sarverott@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
tools = "tools:main"

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"
